--- a/index.html
+++ b/index.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/twitter_favicon.svg" />
+    <title>X. It’s what’s happening / X</title>
+  </head>
+  <body>
+    <!--Main container-->
+    <main class="wrapper">
+      <!--Left Container-->
+      <section class="left-container">
+        <img
+          class="img"
+          src="images/twitter_logo.svg"
+          alt="Twitter Logo"
+          decoding="sync"
+          fetchpriority="high"
+        />
+      </section>
 
-
-
-
-
-
-
-
-
-
-
-
+      <!--Right Container-->
+      <section class="right-container">
+        <div class="text-section">
+          <h1>Happening now</h1>
+          <h2>Join today.</h2>
+        </div>
+        <div class="sign-in-buttons">
+          <button class="google-btn">Sign in with google</button>
+          <button class="apple-btn">Sign up with Apple</button>
+        </div>
+        <div class="separator"><span>or</span></div>
+          <button class="create-account-btn">Create account</button> 
+          <p class="terms-conditions">
+            By signing up, you agree to the <a class="terms">Terms of Service</a> and
+            <a class="terms">Privacy Policy</a>, including <a class="terms">Cookie Use.</a>
+          </p>
+       
+        <div class="existing-account">
+            <h3>Already have an account?</h3>
+            <button class="sign-in">Sign in</button>
+        </div>
+      </section>
+    </main>
+    <!--Footer-->
+    <footer class="site-footer">
+      <ul class="footer-links">
+        <li><a href="#">About |</a></li>
+        <li><a href="#">Download The X App |</a></li>
+        <li><a href="#">Help Center |</a></li>
+        <li><a href="#">Terms of service |</a></li>
+        <li><a href="#">Privacy Policy |</a></li>
+        <li><a href="#">Cookie Policy |</a></li>
+        <li><a href="#">Accessbility |</a></li>
+        <li><a href="#">Ads info |</a></li>
+        <li><a href="#">Blog |</a></li>
+        <li><a href="#">Career |</a></li>
+        <li><a href="#">Brand Resources |</a></li>
+        <li><a href="#">Advertising |</a></li>
+        <li><a href="#">Marketing |</a></li>
+        <li><a href="#">X for Business |</a></li>
+        <li><a href="#">Developers |</a></li>
+        <li><a href="#">© 2025 X Corp.</a></li>
+      </ul>
+      </footer>
+  </body>
 </html>
