--- a/index.html
+++ b/index.html
@@ -24,18 +24,24 @@
       <!--Right Container-->
       <section class="right-container">
         <div class="text-section">
-          <h1>Happening now</h1>
-          <h2>Join today.</h2>
+          <h1 class="heading-one">Happening now</h1>
+          <h2 class="heading-two">Join today.</h2>
         </div>
         <div class="sign-in-buttons">
-          <button class="google-btn">Sign in with google</button>
-          <button class="apple-btn">Sign up with Apple</button>
+          <button class="google-btn">
+            <img class="google-btn-icon" src="images/google_icon.svg" alt="Google Icon"/>
+            <span>Sign in with google </span>
+          </button>
+          <button class="apple-btn">
+            <img class="apple-logo-icon" src="images/apple_logo.svg" alt="Apple Logo"/>
+            <span>Sign up with Apple</span>
+        </button>
         </div>
         <div class="separator"><span>or</span></div>
           <button class="create-account-btn">Create account</button> 
           <p class="terms-conditions">
-            By signing up, you agree to the <a class="terms">Terms of Service</a> and
-            <a class="terms">Privacy Policy</a>, including <a class="terms">Cookie Use.</a>
+            By signing up, you agree to the <a class="terms">Terms of Service</a> and 
+            <a class="terms">Privacy <br>Policy</a>, including<a class="terms">Cookie Use.</a>
           </p>
        
         <div class="existing-account">
@@ -45,8 +51,8 @@
       </section>
     </main>
     <!--Footer-->
-    <footer class="site-footer">
-      <ul class="footer-links">
+    <footer class="footer-links">
+      <ul class="site-footer">
         <li><a href="#">About |</a></li>
         <li><a href="#">Download The X App |</a></li>
         <li><a href="#">Help Center |</a></li>
@@ -62,7 +68,7 @@
         <li><a href="#">Marketing |</a></li>
         <li><a href="#">X for Business |</a></li>
         <li><a href="#">Developers |</a></li>
-        <li><a href="#">© 2025 X Corp.</a></li>
+        <li><span>&copy; 2025 X Corp. |</span></li>
       </ul>
       </footer>
   </body>
